Added content to contact info

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="contact-info__block">
           <a href="" rel="author" class="contact-info__item">
             <div class="contact-info__item-icon-wrapper">
-              <i class="contact-info__item-icon fab fa-linkedin fa-1x"></i>
+              <i class="contact-info__item-icon far fa-calendar  fa-1x"></i>
             </div>
-            <span>binary-studio</span>
+            <span>I'm older then you</span>
           </a>
           <a href="" rel="author" class="contact-info__item">
             <div class="contact-info__item-icon-wrapper">
@@ -45,15 +45,21 @@
         <div class="contact-info__block">
           <a href="" rel="author" class="contact-info__item">
             <div class="contact-info__item-icon-wrapper">
-              <i class="contact-info__item-icon fas fa-map-marker-alt fa-1x"></i>
+              <i class="contact-info__item-icon fas fa-envelope fa-1x"></i>
             </div>
-            <span>Lviv, Ukraine</span>
+            <span>ask@binary-studio.com</span>
           </a>
-          <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+          <a href="" rel="author" class="contact-info__item">
             <div class="contact-info__item-icon-wrapper">
-              <i class="contact-info__item-icon fab fa-linkedin fa-1x"></i>
+              <i class="contact-info__item-icon fas fa-mobile fa-1x"></i>
             </div>
-            <span>binary-studio</span>
+            <span>+380 97 176 8798</span>
+          </a>
+          <a href="" rel="author" class="contact-info__item">
+            <div class="contact-info__item-icon-wrapper">
+              <i class="contact-info__item-icon fab fa-instagram fa-1x"></i>
+            </div>
+            <span>binary-studio-cat</span>
           </a>
         </div>
       </div>
