Resume changed to own

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Résumé</title>
+  <title>Ivan Sabat résumé</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,53 +13,53 @@
   <div class="container">
 
     <div class="resume__block">
-      <h1 class="contact-info__header">Bulka</h1>
-      <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+      <h1 class="contact-info__header">Ivan Sabat</h1>
+      <h3 class="contact-info__sub-header">Junior PHP developer</h3>
 
       <div class="contact_info_container fh">
         <div class="contact-info__block">
-          <a href="" rel="author" class="contact-info__item">
+          <a href="#" rel="author" class="contact-info__item">
             <div class="contact-info__item-icon-wrapper">
               <i class="contact-info__item-icon far fa-calendar  fa-1x"></i>
             </div>
-            <span>I'm older then you</span>
+            <span>02.01.1991</span>
           </a>
-          <a href="" rel="author" class="contact-info__item">
+          <a href="https://goo.gl/maps/CAA8cejxGzdaoRf4A" rel="author" class="contact-info__item" target="_blank">
             <div class="contact-info__item-icon-wrapper">
               <i class="contact-info__item-icon fas fa-map-marker-alt fa-1x"></i>
             </div>
-            <span>Lviv, Ukraine</span>
+            <span>Ivano-Frankivsk, Ukraine</span>
           </a>
-          <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+          <a href="https://www.linkedin.com/in/sabotazh/" rel="author" class="contact-info__item" target="_blank">
             <div class="contact-info__item-icon-wrapper">
               <i class="contact-info__item-icon fab fa-linkedin fa-1x"></i>
             </div>
-            <span>binary-studio</span>
+            <span>Linkedin</span>
           </a>
         </div>
 
         <div class="contact-info__block contact-info__block--center">
-          <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+          <img class="contact-info__avatar" src="assets/avatar.jpg" alt="Avatar">
         </div>
 
         <div class="contact-info__block">
-          <a href="" rel="author" class="contact-info__item">
+          <a href="mailto:sabotazh001@gmail.com&body=Nice&nbsp;to&nbsp;meet&nbsp;you!?subject=Hello" rel="author" class="contact-info__item">
             <div class="contact-info__item-icon-wrapper">
               <i class="contact-info__item-icon fas fa-envelope fa-1x"></i>
             </div>
-            <span>ask@binary-studio.com</span>
+            <span>sabotazh001@gmail.com</span>
           </a>
-          <a href="" rel="author" class="contact-info__item">
+          <a href="tel:+380971768798" rel="author" class="contact-info__item">
             <div class="contact-info__item-icon-wrapper">
               <i class="contact-info__item-icon fas fa-mobile fa-1x"></i>
             </div>
             <span>+380 97 176 8798</span>
           </a>
-          <a href="" rel="author" class="contact-info__item">
+          <a href="https://www.instagram.com/1vansabat" rel="author" class="contact-info__item" target="_blank">
             <div class="contact-info__item-icon-wrapper">
               <i class="contact-info__item-icon fab fa-instagram fa-1x"></i>
             </div>
-            <span>binary-studio-cat</span>
+            <span>Instagram</span>
           </a>
         </div>
       </div>
@@ -74,10 +74,10 @@
             </path>
           </svg>
         </div>
-        <p class="intro_text">Meow.
-          I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-          all I do is sleep and try to help out humans with their projects whenever
-          they need me.
+        <p class="intro_text">
+          Hi there! My name is Ivan. I am 30 years old. I would like to start my career in programming.
+          I like PHP. And what programming language do you like? Write to me in any messenger you like.
+          Who knows, maybe in the future we will become friends &#x1F609;
         </p>
       </div>
     </div>
@@ -85,7 +85,22 @@
     <div class="resume__block">
       <div class="skills">
         <h3 class="skills__header">Skills</h3>
-        <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+        <p class="skills__text">
+        <a href="https://www.sololearn.com/Certificate/1014-6319521/jpg/" class="none" target="_blank">HTML,</a>
+        <a href="https://www.sololearn.com/Certificate/1023-6319521/jpg/" class="none" target="_blank">CSS,</a>
+        JavaScript,
+        <a href="https://www.sololearn.com/Certificate/1059-6319521/jpg/" class="none" target="_blank">PHP,</a>
+        AJAX,
+        jQuery,
+        Git,
+        MySQL,
+        PostgreSQL,
+        OOP,
+        MVC,
+        Linux,
+        PHP Storm,
+        Sublime Text
+        </p>
       </div>
     </div>
 
@@ -96,18 +111,32 @@
           <h3 class="experiences__header">Experience</h3>
           <div class="experiences__company">
             <div class="experiences__company-header">
-              <span class="experiences__company-header-durability">For whole my life</span>
-              <h3 class="experiences__company-header-name">BinaryStudio</h3>
+              <span class="experiences__company-header-durability">SEP 2021 - DEC 2021</span>
+              <h3 class="experiences__company-header-name">Forbus-Tech</h3>
             </div>
-
             <div class="experiences__company-project">
-              <span class="experiences__company-project-role">Binary Studio Cat</span>
-              <h3 class="experiences__company-project-name">Hooman project</h3>
+              <h3 class="experiences__company-project-name">Backend developer</h3>
               <ul class="experiences__company-project-responsibilities">
-                <li>Supported hoomans</li>
-                <li>Slept all the time</li>
-                <li>Lied on the keyboard</li>
-                <li>Watched my hoomans working</li>
+                <li>Adding scripts to new sites</li>
+                <li>Optimizing scripts to make work simple</li>
+                <li>Creating database backups</li>
+                <li>Integration of own services into the CRM system</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="experiences__company">
+            <div class="experiences__company-header">
+              <span class="experiences__company-header-durability">JUL 2021 - SEP 2021</span>
+              <h3 class="experiences__company-header-name">Sigmetix</h3>
+            </div>
+            <div class="experiences__company-project">
+              <h3 class="experiences__company-project-name">Support engineer</h3>
+              <ul class="experiences__company-project-responsibilities">
+                <li>Support for the current version of product</li>
+                <li>Bug fixes</li>
+                <li>Integration of new features</li>
+                <li>Upgrade modules to new versions</li>
               </ul>
             </div>
           </div>
@@ -117,22 +146,31 @@
           <div class="additional-info__education">
             <h3 class="additional-info__education-header">Education</h3>
             <div class="additional-info__education-university">
-              <span class="additional-info__education-university-durability">2021</span>
-              <h3 class="additional-info__education-university-speciality">Cat track</h3>
-              <p class="additional-info__education-university-name">Binary Studio Academy</p>
+              <span class="additional-info__education-university-durability">2017 - 2021<br>full-time education</span>
+              <h3 class="additional-info__education-university-speciality">Doctor of Philosophy</h3>
+              <p class="additional-info__education-university-name">Precarpathian National University</p>
+            </div>
+            <div class="additional-info__education-university">
+              <span class="additional-info__education-university-durability">2010 - 2013<br>external form of education</span>
+              <h3 class="additional-info__education-university-speciality">Mathematics</h3>
+              <p class="additional-info__education-university-name">Precarpathian National University</p>
+            </div>
+            <div class="additional-info__education-university">
+              <span class="additional-info__education-university-durability">2008 - 2013<br>full-time education</span>
+              <h3 class="additional-info__education-university-speciality">Applied Mathematics</h3>
+              <p class="additional-info__education-university-name">Precarpathian National University</p>
             </div>
           </div>
 
           <div class="additional-info__languages">
             <h3 class="additional-info__languages-header">Languages</h3>
             <p class="additional-info__languages-item">
-              Meow dialect
+              Ukrainian (native)
             </p>
             <p class="additional-info__languages-item">
-              Ukrainian (understand)
-            </p>
-            <p class="additional-info__languages-item">
-              English (don't understand)
+              <a class="none" href="https://www.facebook.com/photo.php?fbid=1544610405598005&set=pb.100001471822305.-2207520000..&type=3" target="_blank">
+                English (intermediate)
+              </a>
             </p>
           </div>
         </div>
